# stats

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: deploy.yml
core/: Cargo.toml
core/src/: lib.rs
scripts/: build.ps1
web/: index.html  package.json  tsconfig.json  vite.config.js
web/src/: App.vue  main.ts
web/src/assets/: style.css
web/src/components/: Sheet.vue
web/src/types/: index.d.ts
