[workspace]
resolver = "3"
members = ["core"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
description = "Stats calculator"
license = "AGPL-3.0"
homepage = "https://nil.dev.br/stats"
repository = "https://github.com/tsukilabs/stats"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>", "Danilo Soares <danilofs18@gmail.com>"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

[workspace.lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
