[package]
name = "core"
version = "2.0.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
wasm-bindgen = "0.2"
